<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="3dp"
    android:paddingRight="10dp"
    android:paddingBottom="3dp"
    tools:context=".MainActivity">



    <LinearLayout
        android:id="@+id/info_main_activity_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:orientation="vertical"
        android:background="@drawable/image_show_background_box"
        android:elevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="3dp">

        <ImageButton
            android:id="@+id/info_close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="right"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/image_90_left_ruotate_button"
            android:elevation="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_icons8_close"
            app:tint="@color/white"
            tools:ignore="RtlHardcoded,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="15dp"
            android:text="@string/info_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/simple_task_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/simple_task_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/extra_task_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/extra_task_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gallery_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/selected_images_gallery_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gallery_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_gallery_images"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:padding="5dp"
            android:background="@drawable/image_recyclerview_background_box"
            android:foregroundGravity="center"
            android:scrollbarSize="10dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="horizontal|vertical" />

        <TextView
            android:id="@+id/selected_image_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/selected_images"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_selected_images"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:padding="5dp"
            android:background="@drawable/image_recyclerview_background_box"
            android:foregroundGravity="center"
            android:scrollbarSize="10dp"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="horizontal|vertical"
             />
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/selected_images_gallery_button"
        style="@style/MaterialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:enabled="false"

        android:text="@string/open_selected_images_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

    <ImageButton
        android:contentDescription="@string/info_window_opener"
        android:id="@+id/info_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_question_mark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selected_images_gallery_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:layout_constraintHorizontal_bias="0.975"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>