<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_show_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ImageShowActivity">

        <TextView
            android:id="@+id/image_show_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:paddingTop="5dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/image_name"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_show_close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_show_close_button" />

        <ImageView
            android:id="@+id/image_show_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/image_90_left_ruotate_button"
            app:layout_constraintEnd_toStartOf="@+id/next_image_button"
            app:layout_constraintStart_toEndOf="@+id/previous_image_button"
            app:layout_constraintTop_toBottomOf="@+id/image_show_name_textview" />

        <Button
            android:id="@+id/exif_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/exifDataButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98" />

        <ImageButton
            android:id="@+id/image_90_left_ruotate_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/image_90_left_ruotate_button"
            android:paddingEnd="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_icon_rotate_left_90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:tint="@color/white"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/previous_image_button"
            style="@style/MaterialButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_left_arrow"
            android:contentDescription="@string/image_90_left_ruotate_button"
            android:enabled="false"
            android:paddingEnd="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_left_arrow"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/image_show_close_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/image_90_left_ruotate_button"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_icons8_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.96"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01"
            app:tint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/image_90_right_ruotate_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_button"
            android:contentDescription="@string/image_90_right_ruotate_button"
            android:paddingStart="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_icon_rotate_right_90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96"
            app:tint="@color/white"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_image_button"
            style="@style/MaterialButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_right_arrow"
            android:contentDescription="@string/image_90_right_ruotate_button"
            android:enabled="false"
            android:paddingStart="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_right_arrow"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
